src/objects/Partner_BOCA_To_Prospect__c.object
<CustomObject>
    <fields>
        <fullName>Application_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Request</label>
        <referenceTo>Application_Request__c</referenceTo>
        <relationshipLabel>Partner BOCA To Prospects</relationshipLabel>
        <relationshipName>Partner_BOCA_To_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CP_Application_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP Application Request</label>
        <referenceTo>CP_Application_Request__c</referenceTo>
        <relationshipLabel>Partner BOCA To Prospects</relationshipLabel>
        <relationshipName>Partner_BOCA_To_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner BOCA To Prospects</relationshipLabel>
        <relationshipName>Partner_BOCA_To_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Application_URL__c</fullName>
        <description>url generated for BOCA to prospect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Application_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Application Offer</label>
        <referenceTo>OnlineApplicationOffer__c</referenceTo>
        <relationshipLabel>Partner BOCA To Prospects</relationshipLabel>
        <relationshipName>Partner_BOCA_To_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Online_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Online Application</label>
        <referenceTo>OnlineApplication__c</referenceTo>
        <relationshipLabel>Partner BOCA To Prospects</relationshipLabel>
        <relationshipName>Partner_BOCA_To_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Data_Field_1__c</fullName>
        <description>https://jira.devtools.wexinc.com/browse/PSOBACKLOG-247</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Data Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Data_Field_2__c</fullName>
        <description>https://jira.devtools.wexinc.com/browse/PSOBACKLOG-247</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Data Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Data_Field_3__c</fullName>
        <description>https://jira.devtools.wexinc.com/browse/PSOBACKLOG-247</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Data Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Opportunity_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Opportunity ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Verification Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Partner BOCA To Prospects</relationshipLabel>
        <relationshipName>Partner_BOCA_To_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Partner BOCA To Prospects</relationshipLabel>
        <relationshipName>Partner_BOCA_To_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeFormObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeFormObject</label>
        <referenceTo>WeFormObject__c</referenceTo>
        <relationshipLabel>Partner BOCA To Prospects</relationshipLabel>
        <relationshipName>Partner_BOCA_To_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner BOCA To Prospect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>Application_Request__c</columns>
        <columns>Online_Application__c</columns>
        <columns>CP_Application_Request__c</columns>
        <columns>WeFormObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner BOCA To Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner BOCA To Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>